--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<meta charset="UTF-8">
 	<title>To DO list</title>
 	<link rel="stylesheet" href="assets/css/todos.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<div id="container">
 		<h1>To-do List</h1>
-		<input type="text">
+		<input type="text" placeholder="Add New ToDo">
 		<ul>
-			<li><span>x</span>Go To Potions Class</li>
-			<li><span>x</span>Buy New Robes</li>
-			<li><span>x</span>Visit Hagrid</li>
+			<li><span>X</span> Go To Potions Class</li>
+			<li><span>X</span> Buy New Robes</li>
+			<li><span>X</span> Visit Hagrid</li>
 		</ul>
 	</div>
 
