--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<title>To DO list</title>
 	<link rel="stylesheet" href="assets/css/todos.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 	<script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
 </head>
 <body>
 	<div id="container">
-		<h1>To-do List</h1>
+		<h1>To-do List<i class="fas fa-plus"></i></h1>
 		<input type="text" placeholder="Add New ToDo">
 		<ul>
-			<li><span>X</span> Go To Potions Class</li>
-			<li><span>X</span> Buy New Robes</li>
-			<li><span>X</span> Visit Hagrid</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Go To Potions Class</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Buy New Robes</li>
+			<li><span><i class="fas fa-trash-alt"></i></span> Visit Hagrid</li>
 		</ul>
 	</div>
 
